--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = [
     "Kennedy Oliveira <kennedyroliveira@gmail.com>"
 ]
 publish = false
+repository = "https://github.com/kennedyoliveira/hltb-proxy"
 
 [dependencies]
 # utils
@@ -45,3 +46,25 @@ axum-otel-metrics = { git = "https://github.com/kennedyoliveira/axum-otel-metric
 
 [dev-dependencies]
 tracing-test = "0.2"
+
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
+
+# Config for 'cargo dist'
+[workspace.metadata.dist]
+# Whether to consider the binaries in a package for distribution (defaults true)
+dist = true
+# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
+cargo-dist-version = "0.22.1"
+# CI backends to support
+ci = "github"
+# The installers to generate for each app
+installers = []
+# Target platforms to build apps for (Rust target-triple syntax)
+targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
+
+[workspace.metadata.dist.github-custom-runners]
+aarch64-unknown-linux-gnu = "arc-runners-hltb-proxy"
+aarch64-unknown-linux-musl = "arc-runners-hltb-proxy"
