--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,8 +63,16 @@ ci = "github"
 # The installers to generate for each app
 installers = []
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
+targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
 
 [workspace.metadata.dist.github-custom-runners]
-aarch64-unknown-linux-gnu = "arc-runners-hltb-proxy"
-aarch64-unknown-linux-musl = "arc-runners-hltb-proxy"
+aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"
+
+[workspace.metadata.dist.dependencies.apt]
+libssl-dev = { version = '*', targets = [
+    "aarch64-unknown-linux-gnu",
+] }
+pkg-config = { version = '*', targets = [
+    "aarch64-unknown-linux-gnu",
+] }
+
