--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install just
         run: cargo install just
 
+      - name: Install pre-requisites
+        run: just install-prereqs
+
       - name: Build
         run: cargo build --verbose
 
