--- a/fly.toml
+++ b/fly.toml
@@ -27,9 +27,8 @@ primary_region = 'gru'
   path = '/metrics'
 
 [[http_service.checks]]
-  interval = 15000
   grace_period = "10s"
+  interval = "30s"
   method = "GET"
-  protocol = "http"
+  timeout = "5s"
   path = "/health"
-  timeout = "2s"
