--- a/fly.toml
+++ b/fly.toml
@@ -17,8 +17,13 @@ primary_region = 'gru'
   min_machines_running = 0
   processes = ['app']
 
+[http_service.concurrency]
+  type = "requests"
+  soft_limit = 150
+  hard_limit = 200
+
 [[vm]]
-  memory = '512mb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
 
