chore(release): Change fly.io default region to US

--- a/fly.toml
+++ b/fly.toml
@@ -4,7 +4,7 @@
 #
 
 app = 'proxy-hltb'
-primary_region = 'gru'
+primary_region = 'iad'
 
 [build]
   image = 'ghcr.io/kennedyoliveira/hltb-proxy:latest'
