chore(k8s): Fix k8s Prometheus service monitor

--- a/deploy/k8s/kustomization.yaml
+++ b/deploy/k8s/kustomization.yaml
@@ -8,8 +8,12 @@ resources:
   - prometheus-monitor.yaml
   - hpa.yaml
 
-commonLabels:
-  app: hltb-proxy
+labels:
+  - pairs:
+      app.kubernetes.io/name: hltb-proxy
+      app.kubernetes.io/instance: hltb-proxy
+    includeSelectors: true
+    includeTemplates: true
 
 images:
   - name: ghcr.io/kennedyoliveira/hltb-proxy
