--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ clap = { version = "4.5", features = ["derive", "env"] }
 dotenvy = "0.15"
 thiserror = "1.0"
 regex = "1.11.0"
+bytes = "1.7"
 
 # async
 tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "parking_lot", "signal"] }
