ci(Mergify): configuration update
Signed-off-by: Kennedy Oliveira <null>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,8 @@ queue_rules:
   - name: Dependency Updates
     merge_method: squash
     queue_conditions:
-        - check-success = Run tests
-        - author = dependabot[bot]
+      - check-success = Run tests
+      - author = dependabot[bot]
     merge_conditions:
-        - check-success = Run tests
+      - check-success = Run tests
+    branch_protection_injection_mode: none
