--- a/.mergify.yml
+++ b/.mergify.yml
@@ -7,3 +7,11 @@ queue_rules:
     merge_conditions:
       - check-success = Run tests
     branch_protection_injection_mode: none
+
+pull_request_rules:
+  - name: Delete merged branches
+    conditions:
+      - merged
+    actions:
+        delete_head_branch:
+      
