--- a/.mergify.yml
+++ b/.mergify.yml
@@ -6,11 +6,16 @@ queue_rules:
       - author = dependabot[bot]
     merge_conditions:
       - check-success = Run tests
-
+    branch_protection_injection_mode: none
 pull_request_rules:
+  - name: Queue dependency updates
+    conditions:
+      - author = dependabot[bot]
+    actions:
+      queue:
   - name: Delete merged feature branches
     conditions:
       - merged
       - head ~= feature/.*
     actions:
-        delete_head_branch:
+      delete_head_branch:
