--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,8 +44,10 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-logfmt = "0.3"
 log = "0.4.26"
 prometheus = "0.13"
-axum-otel-metrics = { version = "0.9" }
-opentelemetry-prometheus = "0.27"
+axum-otel-metrics = { version = "0.10" }
+opentelemetry = "0.28"
+opentelemetry_sdk = "0.28"
+opentelemetry-prometheus = "0.28"
 
 [dev-dependencies]
 tracing-test = "0.2"
