build(deps): Bump rust version to 1.86.0

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-channel = "1.85.0"
-components = [ "rustc", "cargo", "rust-std" ]
+channel = "1.86.0"
+components = [ "rustc", "cargo", "rust-std", "clippy", "rustfmt" ]
 profile = "minimal"
